Добавил заполнение данными при запуске